# Project_monte_carlo

./: CMakeLists.txt  Doxyfile  README (copy).md  README.md  main.cpp  pscs.ipynb  visualization.py  visualization1.py  visualize.py
Modules/: AbstractError.h  AbstractError.hpp  AbstractExpectation.cpp  AbstractExpectation.h  AbstractFunc.cpp  AbstractFunc.h  AbstractReader.cpp  AbstractReader.h  AbstractVariable.h  CMakeLists.txt  CentralLimitThm.cpp  CentralLimitThm.h  Error.hpp  ExpFunc.cpp  ExpFunc.h  FunctReader.cpp  FunctReader.h  MonteCarloExpectation.cpp  MonteCarloExpectation.h  NormalDist.cpp  NormalDist.h  NormalReader.cpp  NormalReader.h  PolynomFunc.cpp  PolynomFunc.h  PolynomlFunc.cpp  PolynomlFunc.h  StatisticalMoment.cpp  StatisticalMoment.h  TrigoFunc.cpp  TrigoFunc.h  UniformDist.cpp  UniformDist.h  UniformReader.cpp  UniformReader.h
Test/: CMakeLists.txt  CTL_test.cpp  MonteCarloExpectation_test.cpp  NormalDist_test.cpp  Reader_test.cpp
Test/basic_tests/: CMakeLists.txt  Input_test.cpp  MonteCarloExpectation_test.cpp  Normal_test.cpp  StandardCentralLimitThm_test.cpp  Uniform_test.cpp
Test/lib/googletest/include/gtest/: gtest-printers.h  gtest.h
Test/lib/googletest/include/gtest/internal/: gtest-port.h
Test/lib/googletest/src/: gtest-death-test.cc  gtest_main.cc
Test/lib/googletest/test/: googletest-output-test.py
Test/tests/: 11.txt  CMakeLists.txt  MonteCarloExpectation_test.cpp  NormalDist_test.cpp  Reader_test.cpp  UniformDist_test.cpp
Test_files/: TestOrder.txt
html/: AbstractError_8h_source.html  AbstractExpectation_8h_source.html  AbstractFunc_8h_source.html  AbstractReader_8h_source.html  AbstractVariable_8h_source.html  CentralLimitThm_8h_source.html  ExpFunc_8h_source.html  FunctReader_8h_source.html  MonteCarloExpectation_8h_source.html  NormalDist_8h_source.html  NormalReader_8h_source.html  PolynomFunc_8h_source.html  StatisticalMoment_8h_source.html  TrigoFunc_8h_source.html  UniformDist_8h_source.html  UniformReader_8h_source.html  annotated.html  classAbstractError-members.html  classAbstractError.html  classAbstractError__coll__graph.map  classAbstractError__coll__graph.md5  classAbstractError__inherit__graph.map  classAbstractError__inherit__graph.md5  classAbstractExpectation-members.html  classAbstractExpectation.html  classAbstractExpectation__inherit__graph.map  classAbstractExpectation__inherit__graph.md5  classAbstractFunc-members.html  classAbstractFunc.html  classAbstractFunc__inherit__graph.map  classAbstractFunc__inherit__graph.md5  classAbstractReader-members.html  classAbstractReader.html  classAbstractReader__inherit__graph.map  classAbstractReader__inherit__graph.md5  classAbstractVariable-members.html  classAbstractVariable.html  classAbstractVariable__inherit__graph.map  classAbstractVariable__inherit__graph.md5  classCentralLimitThm-members.html  (+104 more)
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+3 more)
latex/: annotated.tex  classAbstractError.tex  classAbstractError__coll__graph.md5  classAbstractError__inherit__graph.md5  classAbstractExpectation.tex  classAbstractExpectation__inherit__graph.md5  classAbstractFunc.tex  classAbstractFunc__inherit__graph.md5  classAbstractReader.tex  classAbstractReader__inherit__graph.md5  classAbstractVariable.tex  classAbstractVariable__inherit__graph.md5  classCentralLimitThm.tex  classExpFunc.tex  classExpFunc__coll__graph.md5  classExpFunc__inherit__graph.md5  classFunctReader.tex  classMonteCarloExpectation.tex  classMonteCarloExpectation__coll__graph.md5  classMonteCarloExpectation__inherit__graph.md5  classNormalDist.tex  classNormalDist__coll__graph.md5  classNormalDist__inherit__graph.md5  classNormalReader.tex  classNormalReader__coll__graph.md5  classNormalReader__inherit__graph.md5  classPolynomFunc.tex  classPolynomFunc__coll__graph.md5  classPolynomFunc__inherit__graph.md5  classStatisticalMoment.tex  classTrigoFunc.tex  classTrigoFunc__coll__graph.md5  classTrigoFunc__inherit__graph.md5  classUniformDist.tex  classUniformDist__coll__graph.md5  classUniformDist__inherit__graph.md5  classUniformReader.tex  classUniformReader__coll__graph.md5  classUniformReader__inherit__graph.md5  dir_f2541a3b18981391fa76fac5599e978a.tex  (+21 more)
output/: moments.csv  sample_means_1000.csv
src/: CMakeLists.txt  main.cpp  visualization.py
src/Modules/: AbstractExpectation.h  AbstractFunc.h  CentralLimitThm.cpp  ExpFunc.cpp  ExpFunc.h  FunctReader.cpp  NormalDist.cpp  NormalReader.cpp  PolynomFunc.cpp  StatisticalMoment.cpp  StatisticalMoment.h  UniformReader.cpp  UniformReader.h
src/Test/: CMakeLists.txt  MonteCarloExpectation_test.cpp  Reader_test.cpp
src/Test_files/: TestNormalMean.txt
tr/: sample_means_1000.csv  sample_means_3000.csv
(+3 files in other folders)
